# CppEtfer

./: .gitignore  CMakeLists.txt  ReadMe.md
.github/workflows/: CLANG_18-Ubuntu.yml  GCC_13-MacOS.yml  MSVC_2022-Windows.yml
Include/CppEtfer/: Concepts.hpp  CppEtfer.hpp  EtfType.hpp  HashMap.hpp  StructuralIterator.hpp  Tuple.hpp  UtilFunctions.hpp
Tests/: CMakeLists.txt  CppEtfer.cpp
